# OCR-Devnagari

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: HYBRID_ARCHITECTURE.md  RESILIENT_OCR_PLAN.md
src/ocr_hindi/: __init__.py  __main__.py  async_processor.py  cache.py  cli.py  multi_processor.py  processor.py  prompts.py  utils.py
src/ocr_hindi/backends/: __init__.py  base.py  easyocr_backend.py  gemini_backend.py  hybrid_backend.py  mantra_detector.py  marker_backend.py  tesseract_backend.py
